@@ -100,7 +100,7 @@
                 <version>2.22.0</version>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
+
                     </argLine>
                 </configuration>
             </plugin>
